--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "jstat": "^1.9.6",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
